--- a/index.html
+++ b/index.html
@@ -1,291 +1,82 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Title</title>
+    <!-- UIkit CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/css/uikit.min.css"/>
 
+    <!-- UIkit JS -->
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit-icons.min.js"></script>
 </head>
+<style>
+    .uk-column-divider{
+        column-rule: 2px solid #e22432;
+        column-gap: 60px;
+    }
+    @media screen and (min-width: 700px) {
+        .image-new {
+            height: 70vh !important;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            border-radius: 45px;
+        }
+    }
+    @media screen and (max-width: 699px) {
+        .image-new {
+            min-height: 50% !important;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: calc(100vh - 85vh);
+        }
+    }
+    .uk-text-lead{
+        color: aliceblue !important;
+    }
+    .uk-offcanvas-bar{
+        background-color: #d9d9d9 !important;
+        width: 50vw !important;
+        opacity: 0.9 !important;
+    }
+    *{
+        background-color: #06111c !important;
+    }
+</style>
+<body class="uk-margin-auto-top ">
 
-<body style="background-color: #000;">
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner position-relative">
-            <div class="carousel-item active">
-                <img src="images/Revista_Mundo deporte.jpg" class="align-middle img-fluid image-new" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte2.jpg" class="align-middle image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte3.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte4.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte5.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte6.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte7.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte8.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte9.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte10.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte11.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte12.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte13.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte14.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte15.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte16.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte17.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte18.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte19.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte20.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte21.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte22.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte23.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte24.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte25.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte26.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte27.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte28.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte29.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte30.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte31.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte32.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte33.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte34.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte35.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte36.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte37.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte38.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte39.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte40.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte41.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte42.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte43.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte44.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte45.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte46.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte47.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte48.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte49.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte50.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte51.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte52.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte53.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte54.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte55.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte56.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte57.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte58.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte59.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte60.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte61.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte62.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte63.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte64.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte65.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte66.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte67.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte68.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte69.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte70.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte71.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte72.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte73.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte74.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte75.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte76.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte77.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte78.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte79.jpg" class="  image-new img-fluid" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/Revista_Mundo deporte80.jpg" class="  image-new img-fluid" alt="...">
+    <div id="all" class="uk-column-1-2 uk-column-divider uk-grid-small uk-child-width-expand@s uk-text-center uk-column-divider ">
+        <div>
+            <div class="uk-card uk-card-default uk-card-body">
+                <h1 class="uk-text-lead">Revista</h1>
+                <img class="image-new" src="images/Revista_Mundo%20deporte.jpg" alt="revista" href="#offcanvas-usage" uk-toggle>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+        <div>
+            <div class="uk-card uk-card-default uk-card-body uk-margin-auto-vertical">
+                <h1 class="uk-text-lead">Periodico</h1>
+                <img class="image-new" src="images/Revista_Mundo%20deporte2.jpg " alt="periodico" href="#offcanvas-usage2" uk-toggle>
+            </div>
+        </div>
     </div>
-    <style>
-        @media screen and (min-width: 700px) {
-            .image-new {
-                height: 100vh !important;
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-            }
-        }
-        @media screen and (max-width: 699px) {
-            .image-new {
-                min-height: 50% !important;
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-                margin-top: calc(100vh - 85vh);
-            }
-        }        
-    </style>
-</body>
+    <div id="offcanvas-usage" uk-offcanvas>
+        <div class="uk-offcanvas-bar">
+            <button style="background-color: #d9d9d9 !important" class="uk-offcanvas-close" type="button" uk-close></button>
+            <a href="paginas/revista.html">
+                <img style="background-color: #d9d9d9 !important" src="logos/MUNDO_DEPORTE.svg" alt="">
+            </a>
+        </div>
+    </div>
+    <div id="offcanvas-usage2" uk-offcanvas="flip: true">
+        <div class="uk-offcanvas-bar">
+            <button style="background-color: #d9d9d9 !important" class="uk-offcanvas-close" type="button" uk-close></button>
+            <a href="paginas/revista.html">
+                <img style="background-color: #d9d9d9 !important" src="logos/EL_ESTADO.svg" alt="">
+            </a>
+        </div>
+    </div>
 
+</body>
 </html>
