--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit-icons.min.js"></script>
 </head>
 <style>
-    .uk-column-divider{
+    .uk-column-divider {
         column-rule: 2px solid #e22432;
         column-gap: 60px;
     }
+
     @media screen and (min-width: 700px) {
         .image-new {
             height: 70vh !important;
@@ -23,17 +24,20 @@
             margin-right: auto;
             border-radius: 45px;
         }
-        .uk-offcanvas-bar{
+
+        .uk-offcanvas-bar {
             background-color: #d9d9d9 !important;
             width: 50vw !important;
             opacity: 0.9 !important;
         }
     }
+
     @media screen and (max-width: 699px) {
-        .custom{
+        .custom {
             width: 24px !important;
             height: 24px !important;
         }
+
         .image-new {
             min-height: 100vh !important;
             display: block;
@@ -41,15 +45,18 @@
             margin-right: auto;
             margin-top: calc(100vh - 85vh);
         }
-        .uk-offcanvas-bar{
+
+        .uk-offcanvas-bar {
             background-color: red !important;
             width: 100vw !important;
             opacity: 0.9 !important;
         }
-        .uk-text-lead{
+
+        .uk-text-lead {
             color: aliceblue !important;
             font-size: 3rem;
         }
+
         .logo {
             max-height: 90vh !important;
             display: block;
@@ -58,14 +65,16 @@
             margin-right: auto;
         }
     }
+
     @media screen and (max-width: 1200px) {
         .image-new {
             min-height: 100vw !important;
             display: block;
             margin-left: auto;
             margin-right: auto;
-            margin-top: calc(100vh - 85vh);
+            margin-top: calc(100vh - 95vh);
         }
+
         .logo {
             max-height: 90vh !important;
             display: block;
@@ -73,52 +82,62 @@
             margin-left: auto;
             margin-right: auto;
         }
-        .uk-offcanvas-bar{
+
+        .uk-offcanvas-bar {
             background-color: #d9d9d9 !important;
             width: 100vw !important;
             opacity: 0.9 !important;
         }
-        .uk-text-lead{
+
+        .uk-text-lead {
             color: aliceblue !important;
-            font-size: 3rem;
+            font-size: 4.5rem;
         }
     }
-    .uk-text-lead{
+
+    .uk-text-lead {
         color: aliceblue !important;
     }
-    *{
+
+    * {
         background-color: #06111c !important;
     }
 </style>
 <body class="uk-margin-auto-top ">
 
-    <div id="all" class="uk-column-1-1@s uk-column-1-1@m uk-column-1-2@l uk-column-divider uk-grid-small uk-child-width-expand@s uk-text-center uk-column-divider ">
-        <div class="column-c">
-            <div class="uk-card uk-card-default uk-card-body column-c">
-                <h1 class="uk-text-lead">Revista</h1>
-                <img class="image-new" src="images/Revista_Mundo%20deporte.jpg" alt="revista" href="#offcanvas-usage" uk-toggle>
-            </div>
-            <div class="uk-card uk-card-default uk-card-body uk-margin-auto-vertical column-c">
-                <h1 class="uk-text-lead">Peri&oacute;dico</h1>
-                <img class="image-new" src="images/Revista_Mundo%20deporte2.jpg " alt="periodico" href="#offcanvas-usage2" uk-toggle>
-            </div>
+<div id="all"
+     class="uk-column-1-1@s uk-column-1-1@m uk-column-1-2@l uk-column-divider uk-grid-small uk-child-width-expand@s uk-text-center uk-column-divider ">
+    <div class="column-c">
+        <div class="uk-card uk-card-default uk-card-body column-c">
+            <h1 class="uk-text-lead">Revista</h1>
+            <img class="image-new" src="images/Revista_Mundo%20deporte.jpg" alt="revista" href="#offcanvas-usage"
+                 uk-toggle>
+        </div>
+        <div class="uk-card uk-card-default uk-card-body uk-margin-auto-vertical column-c">
+            <h1 class="uk-text-lead">Peri&oacute;dico</h1>
+            <img class="image-new" src="images/Revista_Mundo%20deporte2.jpg " alt="periodico" href="#offcanvas-usage2"
+                 uk-toggle>
         </div>
     </div>
-    <div id="offcanvas-usage" uk-offcanvas>
-        <div class="uk-offcanvas-bar">
-            <button style="background-color: #d9d9d9 !important; color: #d9d9d9 !important;" class="custom uk-offcanvas-close" type="button" uk-close></button>
-            <a href="paginas/revista.html">
-                <img class="logo" style="background-color: #d9d9d9 !important" src="logos/MUNDO_DEPORTE.svg" alt="">
-            </a>
-        </div>
+</div>
+<div id="offcanvas-usage" uk-offcanvas>
+    <div class="uk-offcanvas-bar">
+        <button style="background-color: #d9d9d9 !important; color: #d9d9d9 !important;"
+                class="custom uk-offcanvas-close" uk-icon="icon: close; ratio: 2">
+        </button>
+        <a href="paginas/revista.html">
+            <img class="logo" style="background-color: #d9d9d9 !important" src="logos/MUNDO_DEPORTE.svg" alt="">
+        </a>
     </div>
-    <div id="offcanvas-usage2" uk-offcanvas="flip: true">
-        <div class="uk-offcanvas-bar">
-            <button style="background-color: #d9d9d9 !important" class="uk-offcanvas-close" type="button" uk-close></button>
-            <a href="paginas/revista.html">
-                <img class="logo" style="background-color: #d9d9d9 !important" src="logos/EL_ESTADO.svg" alt="">
-            </a>
-        </div>
+</div>
+<div id="offcanvas-usage2" uk-offcanvas="flip: true">
+    <div class="uk-offcanvas-bar">
+        <button style="background-color: #d9d9d9 !important" class="uk-offcanvas-close" uk-icon="icon: close; ratio: 2">
+        </button>
+        <a href="paginas/revista.html">
+            <img class="logo" style="background-color: #d9d9d9 !important" src="logos/EL_ESTADO.svg" alt="">
+        </a>
     </div>
+</div>
 </body>
 </html>
