--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit-icons.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 <style>
     .uk-column-divider {
+        margin-top: 2.5rem !important;
         column-rule: 2px solid #e22432;
         column-gap: 60px;
     }
@@ -54,7 +58,7 @@
 
         .uk-text-lead {
             color: aliceblue !important;
-            font-size: 3rem;
+            font-size: 5rem !important;
         }
 
         .logo {
@@ -91,16 +95,18 @@
 
         .uk-text-lead {
             color: aliceblue !important;
-            font-size: 4.5rem;
+            font-size: 5rem;
         }
     }
 
     .uk-text-lead {
         color: aliceblue !important;
+        font-size: 3.6rem;
     }
 
     * {
         background-color: #06111c !important;
+        font-family: 'Poppins', sans-serif !important;
     }
 </style>
 <body class="uk-margin-auto-top ">
