--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
         .image-new {
             min-height: 100vw !important;
             display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .logo {
