periodico was added correctly

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <div class="uk-offcanvas-bar">
         <button style="background-color: #d9d9d9 !important" class="uk-offcanvas-close" uk-icon="icon: close; ratio: 2">
         </button>
-        <a href="paginas/revista.html">
+        <a href="paginas/periodico.html">
             <img class="logo" style="background-color: #d9d9d9 !important" src="logos/EL_ESTADO.svg" alt="">
         </a>
     </div>
