--- a/paginas/periodico.html
+++ b/paginas/periodico.html
@@ -13,7 +13,7 @@
 </head>
 
 <body style="background-color: #000;">
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
     <div class="carousel-inner position-relative">
         <div class="carousel-item active">
             <img src="../periodico/Elestado.jpg" class="align-middle img-fluid image-new" alt="...">
