periodico was updated

--- a/paginas/periodico.html
+++ b/paginas/periodico.html
@@ -60,11 +60,86 @@
         <div class="carousel-item">
             <img src="../periodico/Elestado15.jpg" class="  image-new img-fluid" alt="...">
         </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado16.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado17.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado18.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado19.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado20.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado21.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado22.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado23.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado24.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado25.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado26.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado27.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado28.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado29.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado30.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado31.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado32.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado33.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado34.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado35.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado36.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado37.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado38.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado39.jpg" class="  image-new img-fluid" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../periodico/Elestado40.jpg" class="  image-new img-fluid" alt="...">
+        </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+            data-bs-slide="prev" style="color: red !important;">
+        <span style="color: red !important;" class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden" style="color: red !important;">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
             data-bs-slide="next">
@@ -75,7 +150,7 @@
 <style>
     @media screen and (min-width: 700px) {
         .image-new {
-            width: 100vw !important;
+            width: 70vw !important;
             display: block;
             margin-left: auto;
             margin-right: auto;
