--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
         <div class="uk-card uk-card-default uk-card-body uk-margin-auto-vertical column-c">
             <h1 class="uk-text-lead">Peri&oacute;dico</h1>
-            <img class="image-new" src="images/Revista_Mundo%20deporte2.jpg " alt="periodico" href="#offcanvas-usage2"
+            <img class="image-new" src="periodico/Elestado.jpg" alt="periodico" href="#offcanvas-usage2"
                  uk-toggle>
         </div>
     </div>
